--- a/firstProjectReactVite/package.json
+++ b/firstProjectReactVite/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.12.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
